// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-ai - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Use for Azure AI: Search, Speech, OpenAI, Document Intelligence. Helps with search, vector/hybrid search, speech-to-text, text-to-speech, transcription, OCR. WHEN: AI Search, query search, vector search, hybrid search, semantic search, speech-to-text, text-to-speech, transcribe, OCR, convert text to speech.",
  "extractedKeywords": [
    "ai",
    "azure",
    "cli",
    "convert",
    "document",
    "helps",
    "hybrid",
    "intelligence",
    "mcp",
    "openai",
    "query",
    "search",
    "semantic",
    "speech",
    "speech-to-text",
    "text",
    "text-to-speech",
    "transcribe",
    "transcription",
    "vector",
    "when",
    "with",
  ],
  "name": "azure-ai",
}
`;

exports[`azure-ai - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "ai",
  "azure",
  "cli",
  "convert",
  "document",
  "helps",
  "hybrid",
  "intelligence",
  "mcp",
  "openai",
  "query",
  "search",
  "semantic",
  "speech",
  "speech-to-text",
  "text",
  "text-to-speech",
  "transcribe",
  "transcription",
  "vector",
  "when",
  "with",
]
`;
